--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -94,7 +94,7 @@
             android:layout_height="200dp"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="60dp" />
 
         <TextView
             android:id="@+id/version"
@@ -105,6 +105,16 @@
             android:layout_marginEnd="10dp"
             android:padding="5dp"
             android:textColor="@color/text_color" />
+
+        <EditText
+            android:id="@+id/chat_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp" />
 
     </RelativeLayout>
 </layout>
